@@ -2,6 +2,7 @@
 -----
 1. Initial work on SlimBrowse - only used in favorites so far.
 2. Dutch, German, and French translations.
+3. Group players have no replaygain setting.
 
 0.0.5
 -----
